--- a/workbook1.ipynb
+++ b/workbook1.ipynb
@@ -1002,7 +1002,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "info2950FA24",
+   "display_name": "datajournal",
    "language": "python",
    "name": "python3"
   },
@@ -1016,7 +1016,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.4"
+   "version": "3.13.7"
   }
  },
  "nbformat": 4,
