completed workbook2.ipynb

--- a/workbook2.ipynb
+++ b/workbook2.ipynb
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -50,11 +50,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Collecting duckdb\n",
+      "  Downloading duckdb-1.4.1-cp313-cp313-win_amd64.whl.metadata (14 kB)\n",
+      "Downloading duckdb-1.4.1-cp313-cp313-win_amd64.whl (12.3 MB)\n",
+      "   ---------------------------------------- 0.0/12.3 MB ? eta -:--:--\n",
+      "   ---------------- ----------------------- 5.0/12.3 MB 30.5 MB/s eta 0:00:01\n",
+      "   ------------------------------------- -- 11.5/12.3 MB 36.2 MB/s eta 0:00:01\n",
+      "   ------------------------------------- -- 11.5/12.3 MB 36.2 MB/s eta 0:00:01\n",
+      "   ---------------------------------------- 12.3/12.3 MB 15.3 MB/s  0:00:00\n",
+      "Installing collected packages: duckdb\n",
+      "Successfully installed duckdb-1.4.1\n",
+      "Note: you may need to restart the kernel to use updated packages.\n"
+     ]
+    }
+   ],
    "source": [
-    "#%pip install duckdb"
+    "%pip install duckdb"
    ]
   },
   {
@@ -66,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -82,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -116,7 +134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -151,7 +169,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -199,13 +217,89 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>name</th>\n",
+       "      <th>CountRoles</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Boman Irani</td>\n",
+       "      <td>25</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Kareena Kapoor Khan</td>\n",
+       "      <td>25</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Shah Rukh Khan</td>\n",
+       "      <td>23</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Takahiro Sakurai</td>\n",
+       "      <td>21</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Paresh Rawal</td>\n",
+       "      <td>20</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                  name  CountRoles\n",
+       "0          Boman Irani          25\n",
+       "1  Kareena Kapoor Khan          25\n",
+       "2       Shah Rukh Khan          23\n",
+       "3     Takahiro Sakurai          21\n",
+       "4         Paresh Rawal          20"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "#A1 your code here\n",
     "#part 1 is already done for you\n",
-    "credits = pd.read_csv('credits.csv')"
+    "credits = pd.read_csv('credits.csv')\n",
+    "\n",
+    "\n",
+    "\n",
+    "topActors = duckdb.sql(\"\"\"SELECT name, COUNT(role) AS CountRoles FROM credits\n",
+    "                       GROUP BY person_id, name\n",
+    "                       ORDER BY CountRoles DESC\"\"\").df()\n",
+    "topActors.head()"
    ]
   },
   {
@@ -353,7 +447,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -438,7 +532,7 @@
        "77799     378132  tm1059008        Isabel Gaona        Cacica  ACTOR"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -457,7 +551,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -542,7 +636,7 @@
        "68028     378132  tm1059008        Isabel Gaona        Cacica  ACTOR"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -584,7 +678,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -669,7 +763,7 @@
        "4  tm84618  Cybill Shepherd                    Betsy  Taxi Driver         8.2"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -722,11 +816,99 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 33,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>name</th>\n",
+       "      <th>count</th>\n",
+       "      <th>score</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Martin Scorsese</td>\n",
+       "      <td>6</td>\n",
+       "      <td>8.160000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Hong Jong-chan</td>\n",
+       "      <td>5</td>\n",
+       "      <td>7.900000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Mahdi Fleifel</td>\n",
+       "      <td>5</td>\n",
+       "      <td>7.800000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Mani Ratnam</td>\n",
+       "      <td>6</td>\n",
+       "      <td>7.733333</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Mike Clattenburg</td>\n",
+       "      <td>5</td>\n",
+       "      <td>7.550000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "               name  count     score\n",
+       "0   Martin Scorsese      6  8.160000\n",
+       "1    Hong Jong-chan      5  7.900000\n",
+       "2     Mahdi Fleifel      5  7.800000\n",
+       "3       Mani Ratnam      6  7.733333\n",
+       "4  Mike Clattenburg      5  7.550000"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "#C1 your code here"
+    "#C1 your code here\n",
+    "\n",
+    "\n",
+    "directors = duckdb.sql(\"\"\"SELECT name, COUNT(*) AS count, AVG(titles.imdb_score) AS score \n",
+    "                            FROM credits \n",
+    "                            LEFT JOIN titles ON credits.id = titles.id\n",
+    "                            WHERE credits.role = 'DIRECTOR'\n",
+    "                            GROUP BY credits.name\"\"\").df()\n",
+    "\n",
+    "top_directors = duckdb.sql(\"\"\"SELECT * FROM directors\n",
+    "                           WHERE count >= 5\n",
+    "                           ORDER BY score DESC\"\"\").df()\n",
+    "\n",
+    "top_directors.head()\n"
    ]
   },
   {
@@ -805,7 +987,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "info2950FA24",
+   "display_name": "datajournal",
    "language": "python",
    "name": "python3"
   },
@@ -819,7 +1001,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.4"
+   "version": "3.13.7"
   }
  },
  "nbformat": 4,
